--- a/MyWebAppProject/Views/Home/Index.cshtml
+++ b/MyWebAppProject/Views/Home/Index.cshtml
@@ -1,35 +1,46 @@
-﻿@model IEnumerable<DataAccessLayer.Models.Pen>
-@{
-    //ViewData["Title"] = "Список ручек";
-    Layout = null;
-}
-<!DOCTYPE html>
+﻿@model MyDataAccessLayer.Models.GeneralModel 
+    @{
+        //ViewData["Title"] = "Список ручек";
+        Layout = null;
+    }
+    <!DOCTYPE html>
 
-<html>
-<head>
-    <title>Магазин Ручек</title>
-</head>
-<body>
-    <h3>Ручки</h3>
-    <table border="1" bordercolor="black">
-        <tr>
-            <td>id</td>
-            <td>Бренд</td>
-            <td>Цвет</td>
-            <td>Цена</td>
-            <td></td>
-        </tr>
-        @foreach (var pen in Model)
-        {
-    <tr>
-        <td>@pen.PenId</td>
-        <td>@pen.Brand</td>
-        <td>@pen.Color</td>
-        <td>@pen.Price</td>
-    </tr>
-        }
-    </table>
-</body>
+    <html>
+    <head>
+        <title>Магазин Ручек</title>
+    </head>
+    <body>
+        <h3>Ручки</h3>
+            
+                <table border="1" bordercolor="black" style="float:left">
+                    <tr>
+                        <td>id</td>
+                        <td>Цвет</td>
+                        <td>Цена</td>
+                    </tr>
+                    @foreach (var pen in Model.Pens)
+                    {
+                        <tr>
+                            <td>@pen.Id</td>
+                            <td>@pen.Color</td>
+                            <td>@pen.Price</td>
+                        </tr>
+                    }
+                </table>
+            
+                <table border="1" bordercolor="black" >
+                    <tr>
+                        <td>Бренд</td>
+                    </tr>
+                    @foreach (var brand in Model.Brands)
+                    {
+                        <tr>
+                            <td>@brand.Name</td>
+                        </tr>
+                    }
+                </table>
+           
+    </body>
 </html>
 
 
@@ -45,7 +56,7 @@
 </form>
 <br />
 <form method="get" action="~/Home/DeleteFromDataBase">
-   <h3>id ручки</h3> <input type="number" min="@Model.First().PenId" max="@Model.Last().PenId" name="id" /><br />
+    <h3>id ручки</h3> <input type="number" name="id" /><br />
     <br />
     <input type="submit" value="Удалить ручку из базы" />
 </form>
