add bootstrap and fixed css file

--- a/MyWebAppProject/Views/Home/Index.cshtml
+++ b/MyWebAppProject/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
 <html>
 <head>
     <title>Магазин Ручек</title>
+    <link rel="stylesheet" href="/css/site.css"/>
 </head>
 <body>
     <h3>Ручки</h3>
@@ -51,25 +52,12 @@
     <label>Цена</label><br />
     <input type="number" min="5" max="1000" name="price" /><br />
     <br />
-    <input type="submit" value="добавить в базу" />
+    <input type="submit" class="btn btn-success" value="добавить в базу" />
 </form>
 <br />
-<p><button class="btn btn-primary" id="load">Удалить ручку из базы</button></p>
-<h3>id ручки</h3><input type="number" name="id" id="elem" />
-<br />
-<script>
-    document.getElementById('load').addEventListener('click', () => {
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function () {
-            if (this.readyState == 4 && this.status == 200) {
-                document.getElementById('elem').innerHTML = this.responseText;
-            }
-        }
-        var elem = document.getElementById("elem").value;
-        
-        xhr.open('DELETE', '/Home/DeleteFromDataBase/?id=' + elem);
-        console.log(`Элемент {id = ${elem}} удален.`);
-        xhr.send();
-    });
-</script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+ <p><button class="btn btn-danger" id="load">Удалить ручку из базы</button></p>
+ <h3>id ручки</h3><input type="number" name="id" id="elem" />
+ <br />
+ <script src="/js/site.js"></script>
