--- a/MyWebAppProject/wwwroot/css/site.css
+++ b/MyWebAppProject/wwwroot/css/site.css
@@ -54,11 +54,13 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
+    position: relative;
     min-height: 100%;
-    left: 30px;
+    
 }
-
+.mystyle{
+    margin-left: 30px;
+}
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
