--- a/MyWebAppProject/Views/Home/Index.cshtml
+++ b/MyWebAppProject/Views/Home/Index.cshtml
@@ -60,8 +60,9 @@
     <br />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <p><button class="btn btn-danger" id="load">Удалить ручку из базы</button></p>
-    <h3>id ручки</h3><input type="number" name="id" id="elem" />
-    <br />
-    <script src="/js/site.js"></script>
+    <form method="get" action="~/Home/DeleteFromDataBase">
+        <h3>id ручки</h3> <input type="number" name="id" /><br />
+        <br />
+        <input type="submit" value="Удалить ручку из базы" />
+    </form>
 </div>
